# Cryo-EM-Heterogeneity-Challenge-1

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  figure_utils.py  pyproject.toml
.github/workflows/: main_merge_check.yml  publish_and_tag.yml  ruff.yml  testing.yml
config_files/: config_distribution_to_distribution.yaml  config_map_to_map.yaml  config_map_to_map_distance_matrix.yaml  config_plotting.yaml  config_preproc.yaml  config_svd.yaml  map_to_map_distance_matrix_config.yaml  test_config_map_to_map_distance_matrix.yaml
data/: fetch_data.sh
docs/: map_normalization.ipynb  setup_zernike3d_distance.md
scripts/: make_m2m_d2d_plots.py  make_mock_submissions.py  make_reference_map.py
src/cryo_challenge/: __init__.py  command_line.py  dist_calculator.py  power_spectrum_utils.py  wrangle.py
src/cryo_challenge/_commands/: run_distribution2distribution_pipeline.py  run_map2map_pipeline.py  run_map_to_map_distance_matrix.py  run_preprocessing.py  run_svd.py
src/cryo_challenge/_distribution_to_distribution/: distribution_to_distribution.py  optimal_transport.py
src/cryo_challenge/_map_to_map/: map_to_map_distance.py  map_to_map_distance_matrix.py  map_to_map_pipeline.py
src/cryo_challenge/_map_to_map/alignment/: all_to_all_alignment.ipynb  information_imbalance.ipynb  map_alignment.py  run_torchmp_benchmark.sh  torch_mp.py
src/cryo_challenge/_map_to_map/gromov_wasserstein/: coords.py  cvt.py  fw.ipynb  ggw.ipynb  ggw.py  gm_voxel_map.ipynb  gw_weighted_voxels.py  joint_distribution_close.ipynb  point_cloud.py  qp.ipynb  (+6 more)
src/cryo_challenge/_metric_comparison/: info_imbal.py  information_imbalance.ipynb  information_imbalance.py  metric_comparision_pipeline.py
src/cryo_challenge/_ploting/: plotting_utils.py
src/cryo_challenge/_preprocessing/: __init__.py  align_utils.py  bfactor_normalize.py  crop_pad_utils.py  dataloader.py  fourier_utils.py  normalize.py  preprocessing_pipeline.py
src/cryo_challenge/_svd/: svd_pipeline.py  svd_plots.py  svd_utils.py
src/cryo_challenge/commands/: run_distribution_to_distribution_pipeline.py  run_map2map_pipeline.py  run_preprocessing.py  run_svd.py  run_svd_pipeline.py
src/cryo_challenge/config_validation/: __init__.py  _distribution_to_disribution_validation.py  _distribution_to_distribution_validation.py  _map_to_map_validation.py  _preprocessing_validators.py  _svd_analysis_validation.py
src/cryo_challenge/data/: __init__.py
src/cryo_challenge/distribution_to_distribution/: distribution_to_distribution.py  optimal_transport.py
src/cryo_challenge/fft/: __init__.py  _fourier.py
src/cryo_challenge/io_DEPRECATED/: __init__.py
src/cryo_challenge/map_to_map/: map_to_map_distance.py  map_to_map_pipeline.py
src/cryo_challenge/ploting/: plotting_utils.py
src/cryo_challenge/preprocessing/: __init__.py  _cropping_and_padding.py  _downsampling.py  _global_alignment.py  _preprocessing_pipeline.py  _submission_dataset.py
src/cryo_challenge/svd/: __init__.py  _load_submisisons_and_gt.py  _svd_metrics.py  _svd_pipeline.py  _svd_plots.py  _svd_utils.py  svd_plots.py  svd_utils.py
src/cryo_challenge/utils/: __init__.py  _bfactor_filters.py  _distance_matrix_manipulation.py  _fourier.py  _fourier_statistics.py  _grid_utils.py  _whitening.py
tests/: test_distribution_to_distribution.py  test_frank_wolfe.py  test_map_to_map.py  test_power_spectrum_and_bfactor.py  test_preprocessing.py  test_procrustes_wasserstein.py  test_svd.py
tests/config_files/: test_config_distribution_to_distribution.yaml  test_config_distribution_to_distribution_no_regularization.yaml  test_config_map_to_map.yaml  test_config_map_to_map_external.yaml  test_config_map_to_map_gromov_wasserstein_frank_wolfe.yaml  test_config_map_to_map_gromov_wasserstein_python_ot.yaml  test_config_map_to_map_gw.yaml  test_config_map_to_map_low_memory.yaml  test_config_map_to_map_low_memory_nomask_nonormalize.yaml  test_config_map_to_map_low_memory_subbatch.yaml  test_config_map_to_map_low_memory_subbatch_nomask_nonormalize.yaml  test_config_map_to_map_nomask_nonormalize.yaml  test_config_map_to_map_procrustes_wasserstein.yaml  test_config_map_to_map_self.yaml  test_config_map_to_map_zernike3d.yaml  test_config_preproc.yaml  test_config_svd.yaml
tests/data/: test_metadata_2.csv
tests/data/Ground_truth/: 1.mrc  mask_dilated_wide_224x224.mrc  test_maps_gt_flat_10.npy  test_maps_gt_flat_10.pt  test_mask_bool.mrc  test_mask_dilated_wide.mrc  test_metadata_10.csv
tests/data/data_for_dist_to_dist/: test_map_to_map_distance_matrix_submission_0.pkl
tests/data/dataset_2_submissions/: submission_0.pt  submission_1000.pt  submission_10000.pt
tests/scripts/: fetch_test_data.sh
tutorials/: 1_tutorial_preprocessing.ipynb  2_tutorial_svd.ipynb  3.1_dev_resolution_metric.ipynb  3_tutorial_map2map.ipynb  4_tutorial_distribution2distribution.ipynb  README.md  map_to_map.ipynb  tutorial_distribution2distribution.ipynb  tutorial_map2map.ipynb  tutorial_preprocessing.ipynb  tutorial_svd.ipynb
(+26 files in other folders)
